# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: chip_8.cpp  chip_8.h  chip_8_emulator.cpp  screen.cpp  screen.h
